--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,21 @@
     "files.associations": {
         "iostream": "cpp",
         "unordered_set": "cpp",
-        "vector": "cpp"
+        "vector": "cpp",
+        "ostream": "cpp",
+        "chrono": "cpp",
+        "functional": "cpp",
+        "*.tcc": "cpp",
+        "charconv": "cpp",
+        "expected": "cpp",
+        "optional": "cpp",
+        "format": "cpp",
+        "ratio": "cpp",
+        "system_error": "cpp",
+        "array": "cpp",
+        "regex": "cpp",
+        "tuple": "cpp",
+        "type_traits": "cpp",
+        "utility": "cpp"
     }
 }
